:rocket: [Deploy] Redesign of Instagram
[Deploy] Redesign of Instagram

--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,63 @@
 
         <img class="icon-sm" class="icon" src="https://img.icons8.com/ios/50/000000/settings--v1.png">
     </header>
-   
     
+    <section class="posts-container">
+        <p class="text-box text-md">
+            <span id="posts"></span>
+            <span>Posts</span>
+        </p>
+
+        <p class="text-box text-md">
+            <span>14</span>
+            <span>Followers</span>
+        </p>
+
+        <p class="text-box text-md">
+            <span>83</span>
+            <span>Following</span>
+        </p>
+    </section>
+
+    <ul class="highlights-container">
+        <li>
+            <div class="center">
+                <img class="icon-sm" src="https://img.icons8.com/external-kmg-design-outline-color-kmg-design/32/000000/external-shopping-bag-e-commerce-kmg-design-outline-color-kmg-design-1.png"/>
+            </div>
+            <p class="text-sm">Shopping</p>
+        </li>
+
+        <li>
+            <div class="center">
+                <img class="icon-sm" src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/60/000000/external-carrot-vegetable-vitaliy-gorbachev-lineal-color-vitaly-gorbachev.png"/>
+            </div>
+            <p class="text-sm">Life Style</p>
+        </li>
+
+        <li>
+            <div class="center">
+                <img class="icon-sm" src="https://img.icons8.com/external-filled-outline-icons-pause-08/64/000000/external-clothes-autumn-filled-outline-icons-pause-08.png"/>
+            </div>
+            <p class="text-sm">Trende ?!</p>
+        </li>
+
+        <li>
+            <div class="center">
+                <img class="icon-sm" src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/60/000000/external-plane-summer-vitaliy-gorbachev-lineal-color-vitaly-gorbachev.png"/>
+            </div>
+            <p class="text-sm">Travel</p>
+        </li>
+
+        <li>
+            <div class="center">
+                <img class="icon-sm" src="https://img.icons8.com/external-bearicons-outline-color-bearicons/64/000000/external-Dog-chinese-new-year-bearicons-outline-color-bearicons.png"/>
+            </div>
+            <p class="text-sm">My Dog</p>
+        </li>
+    </ul>
+
+    <section id="photos" class="photos-container"></section>
+
 </body>
 </html>
 
